fix: change scrollbar color in firefox

--- a/styles/Home.scss
+++ b/styles/Home.scss
@@ -289,6 +289,9 @@
       width: 100%;
       height: 15px;
       border: none;
+      background-color: #eee;
+      border-radius: 2px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
       @media (max-width: 768px) {
         display: none;
       }
@@ -299,6 +302,10 @@
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
     }
     progress[value]::-webkit-progress-value {
+      border-radius: 2px;
+      background-color: black;
+    }
+    progress[value]::-moz-progress-bar {
       border-radius: 2px;
       background-color: black;
     }
